# twopointfilaments

./: LICENSE  README.md  pyproject.toml
notebooks/: analytic.ipynb  filament_sim.ipynb  two_point_isothermal.ipynb
