[project]
name = "two-point-filaments"
version = "0.1.0"
description = "Code for figures and computations related to the two-point filamentary transport model"
authors = [
    {name = "audun.theodorsen@uit.no",email = "audun.theodorsen@uit.no"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
