[project]
name = "two-point-filaments"
version = "0.1.0"
description = "Code for figures and computations related to the two-point filamentary transport model"
authors = [
    {name = "audun.theodorsen@uit.no",email = "audun.theodorsen@uit.no"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "sympy (>=1.14.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
